--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
 
 
 </head>
+<body style="opacity: 0">
+  <slides class="layout-widescreen">
+    
+    <!-- LOGO SLIDE -->
+        <slide class="title-slide segue nobackground">
+  <aside class="gdbar">
+    <img src="">
+  </aside>
+  <hgroup class="auto-fadein">
+    <h1>Single Molecule Time Series</h1>
+    <h2>Analytical methods</h2>
+    <p>Ava Caustin<br/>The Closet Data Geek</p>
+  </hgroup>
+  <article></article>  
+</slide>
 
-
-
+</body>
 
 </html>
